--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ h1 {
 
   img {
     width: 80%;
-    
     object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   
