--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+p{
+  size: 50px;
+}
+
 h1 {
     color: navy;
     margin-left: 20px;
@@ -5,14 +9,39 @@ h1 {
 .block{
     display: block;
 }
+button {
+	background-color:#BE5A38;
+	border-radius:28px;
+	border:1px solid #8D432A;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+  
+}
+button:hover {
+	background-color:#D07D62;
+}
+button:active {
+	position:relative;
+	top:1px;
+}
+
+#repay-button{
+  display: none;
+}
 #wrapper-div{
 
-    background-color: blueviolet;
+    background-color: #E2DADB;
     border-style: solid;
     height: 100vw;
 }
   .inside-div{
-      background-color: red;
+      background-color: #BE7C4D;
       border-style: solid;
       width: 80%;
       height: 80%;
@@ -33,6 +62,7 @@ h1 {
     object-fit: cover;
     display: block;
     margin-right: auto;
+    margin-left: auto;
   }
   
   #computer-wrapper{
@@ -41,13 +71,13 @@ h1 {
     margin-top: 8%;
     margin-left: auto;
     margin-right: auto;
-    height: 50%;
+    height: fit-content;
     justify-content: space-around
     
   }
   #right-div{
+    text-align: center;
     width: 70%;
-    
     margin-left: 30%;
 
   }
